@@ -2222,7 +2222,7 @@ void exec_context_dump(ExecContext *c, FILE* f, const char *prefix) {
         }
 
         if (c->capabilities) {
-                _cleanup_cap_free_charp_ char *t;
+                _cleanup_cap_free_charp_ char *t = NULL;
 
                 t = cap_to_text(c->capabilities, NULL);
                 if (t)
@@ -2245,7 +2245,7 @@ void exec_context_dump(ExecContext *c, FILE* f, const char *prefix) {
 
                 for (l = 0; l <= cap_last_cap(); l++)
                         if (!(c->capability_bounding_set_drop & ((uint64_t) 1ULL << (uint64_t) l))) {
-                                _cleanup_cap_free_charp_ char *t;
+                                _cleanup_cap_free_charp_ char *t = NULL;
 
                                 t = cap_to_name(l);
                                 if (t)
